# octomind

./: .gitignore  CHANGELOG.md  CONFIG_MIGRATION_TEST.md  CONFIG_REFACTORING_SUMMARY.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  Makefile  NEW_PROVIDERS_SUMMARY.md  PROVIDER_CHANGES_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  TESTING_PROVIDERS.md  UPDATES.md  build.sh  install.sh
.cargo/: config.toml
.github/workflows/: cross-build.yml  release.yml
config-templates/: default.toml
doc/: 01-installation.md  01-overview.md  02-configuration.md  02-overview.md  03-configuration.md  03-providers.md  04-indexing.md  04-providers.md  05-sessions.md  06-advanced.md  07-command-layers.md  08-mcp-server-development.md  README.md  command_layers.md  pre-commit.md
doc/examples/: command_layers_config.toml  example_new_config.toml  layer_config.toml  server_registry_config.toml  simple_commands.toml
docs/: layer_configuration.md
examples/: layer_config.toml
scripts/: install-completions.sh  test-completions.sh
src/: config.rs  config_clean_broken.rs  content.rs  directories.rs  indexer.rs  lib.rs  main.rs  prompt.rs  state.rs  store.rs
src/commands/: ask.rs  clear.rs  config.rs  graphrag.rs  index.rs  mod.rs  search.rs  session.rs  shell.rs  vars.rs  view.rs  watch.rs
src/config/: defaults.rs  layers.rs  loading.rs  mcp.rs  migrations.rs  mod.rs  providers.rs  roles.rs  validation.rs
src/indexer/: embed.rs  graph_optimization.rs  graphrag.rs  mod.rs  search.rs
src/indexer/languages/: bash.rs  cpp.rs  go.rs  javascript.rs  json.rs  mod.rs  php.rs  python.rs  ruby.rs
src/mcp/: dev.rs  fs.rs  health_monitor.rs  mod.rs  process.rs  server.rs
src/mcp/agent/: functions.rs  mod.rs
src/mcp/dev/: functions.rs  graphrag.rs  mod.rs  semantic.rs  shell.rs
src/mcp/fs/: core.rs  directory.rs  file_ops.rs  functions.rs  html_converter.rs  mod.rs  text_editing.rs
src/providers/: mod.rs
src/session/: cache.rs  chat.rs  chat_helper.rs  helper_functions.rs  image.rs  indexer.rs  layers.rs  logger.rs  mod.rs  model_utils.rs  openrouter.rs  project_context.rs  report.rs  smart_summarizer.rs  token_counter.rs
src/session/chat/: animation.rs  assistant_output.rs  command_executor.rs  commands.rs  context_reduction.rs  context_truncation.rs  cost_tracker.rs  editorconfig_formatter.rs  formatting.rs  input.rs  layered_response.rs  markdown.rs  message_handler.rs  mod.rs  response.rs  session.rs  syntax.rs  tool_error_tracker.rs  tool_processor.rs
src/session/chat/response/: tool_execution.rs  tool_result_processor.rs
src/session/chat/session/: commands.rs  core.rs  display.rs  messages.rs  mod.rs  runner.rs  utils.rs
src/session/chat/session/commands/: cache.rs  clear.rs  context.rs  copy.rs  exit.rs  help.rs  image.rs  info.rs  layers.rs  list.rs  loglevel.rs  mcp.rs  mod.rs  model.rs  reduce.rs  report.rs  run.rs  save.rs  session.rs  summarize.rs  truncate.rs  utils.rs
src/session/layers/: generic_layer.rs  layer_trait.rs  mod.rs  orchestrator.rs  processor.rs
src/session/layers/types/: context_generator.rs  developer.rs  generic.rs  mod.rs  query_processor.rs  reducer.rs
src/session/mcp/: dev.rs  fs.rs  mod.rs  process.rs  server.rs  shell.rs
src/session/providers/: amazon.rs  anthropic.rs  cloudflare.rs  google.rs  mod.rs  openai.rs  openrouter.rs
