[package]
name = "octodev"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
crossterm = "0.26.1"
walkdir = "2.3.3"
ignore = "0.4.23"
parking_lot = "0.12.1"
surrealdb = { version = "1.5.0", features = ["kv-rocksdb"] }
serde = { version = "1.0.217", features = ["derive"] }
tree-sitter = "0.24.7"
tree-sitter-php = "0.23.11"
tree-sitter-rust = "0.23.2"
tree-sitter-python = "0.23.6"
tree-sitter-javascript = "0.23.1"
tree-sitter-json = "0.24.8"
tree-sitter-markdown = "0.7.1"
tree-sitter-go = "0.23.4"
tree-sitter-cpp = "0.23.4"
tree-sitter-bash = "0.23.3"
uuid = { version = "1.12.0", features = ["v4"] }
tree-sitter-typescript = "0.23.2"
tree-sitter-ruby = "0.23.1"
reqwest = { version = "0.12.12", features = ["json"] }
anyhow = "1.0.95"
serde_json = "1.0.136"
sha2 = "0.10.8"
clap = { version = "4.5.26", features = ["derive"] }
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
fastembed = "4.7.0"
toml = "0.8.14"
serde_derive = "1.0.217"
lazy_static = "1.4.0"
chrono = "0.4"
openrouter-rs = "0.4.4"
spinners = "4.1.1"
clipboard = "0.5.0"
ctrlc = "3.4.1"
rustyline = "12.0.0"
regex = "1.10.5"
colored = "3.0.0"
futures = "0.3.31"

[build-dependencies]
cc="*"
