[package]
name = "octodev"
version = "0.1.0"
edition = "2021"

# Enable static linking
[profile.release]
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce parallel code generation units for better optimization
panic = "abort"  # Abort on panic for smaller binary size
strip = true      # Strip symbols from binary

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
crossterm = "0.26.1"
parking_lot = "0.12.1"
chrono = "0.4.39"
serde = { version = "1.0.217", features = ["derive"] }
uuid = { version = "1.12.0", features = ["v4"] }
tiktoken-rs = "0.6.0" # Token counter
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1.0.95"
serde_json = "1.0.136"
clap = { version = "4.5.26", features = ["derive"] }
toml = "0.8.14"
lazy_static = "1.4.0"
ctrlc = "3.4.1"
rustyline = { version = "12.0.0", features = ["custom-bindings"] }
regex = "1.10.5"
colored = "3.0.0"
async-trait = "0.1.77"
termimad = "0.32.0"
syntect = "5.2.0"
html5ever = "0.27.0"
markup5ever_rcdom = "0.3.0"
url = "2.4.1"
dirs = "5.0.1"

[profile.dev]
opt-level = 1          # Basic optimizations without slowing compilation too much
debug = true           # Keep debug symbols for backtraces
debug-assertions = true # Keep runtime checks
overflow-checks = true  # Keep overflow checks
lto = false            # Disable Link Time Optimization to speed up builds
codegen-units = 256    # Use more codegen units for faster parallel compilation
incremental = true     # Enable incremental compilation
rpath = false          # Disable runtime search path
